update stateful function docs
Signed-off-by: laminar <tpiperatgod@gmail.com>