@@ -31,55 +31,124 @@ After packaging a stateful function, you can submit it to a Pulsar cluster. This
 
 Before submitting a stateful function, you need to enable the Apache BookKeeper table service. This section describes how to enable the  BookKeeper table service.
 
+Currently, the BookKeeper table service uses the NAR package, so you need to set the configuration in the `bookkeeper.conf` configuration file.
+
+```text
+##################################################################
+##################################################################
+# stream/table service settings
+##################################################################
+##################################################################
+
+### gRPC Server ###
+
+# The gRPC server port to listen on. The default is 4181.
+storageserver.grpc.port=4181
+
+### Dlog settings for the BookKeeper table service ###
+
+#### Replication Settings
+dlog.bkcEnsembleSize=3
+dlog.bkcWriteQuorumSize=2
+dlog.bkcAckQuorumSize=2
+
+### Storage ###
+
+# The local storage directories for storing table range data (For example, the RocksDB Sorted String Table (SST)  files).
+storage.range.store.dirs=data/bookkeeper/ranges
+
+# Specify whether the storage server supports serving read-only tables. The default is false.
+storage.serve.readonly.tables=false
+
+# The cluster controller schedule interval, in milliseconds. The default is 30 seconds.
+storage.cluster.controller.schedule.interval.ms=30000
+```
+
+You can apply the above configurations to your Kubernetes environment as follows.
+
 1. Update the BookKeeper configuration file.
 
-    Currently, the service uses the NAR package, so you need to set the configuration in the `bookkeeper.conf` configuration file.
+    In the namespace (`${PULSAR_NAMESPACE}`) where the Pulsar cluster is installed, find and edit the `ConfigMap` resource that is named `${PULSAR_RELEASE_NAME}-pulsar-bookie`. `${PULSAR_RELEASE_NAME}` is the release name when the Pulsar cluster is installed using the Helm chart).
 
-    ```text
-    ##################################################################
-    ##################################################################
-    # stream/table service settings
-    ##################################################################
-    ##################################################################
-
-    ### gRPCServer ###
-
-    # The gRPC server port to listen on. The default is 4181.
-    storageserver.grpc.port=4181
-
-    ### Dlog settings for table service ###
-
-    #### Replication Settings
-    dlog.bkcEnsembleSize=3
-    dlog.bkcWriteQuorumSize=2
-    dlog.bkcAckQuorumSize=2
-
-    ### Storage ###
-
-    # The local storage directories for storing table range data (e.g. RocksDB sorted string table (sst)  files).
-    storage.range.store.dirs=data/bookkeeper/ranges
-
-    # Specify whether the storage server is capable of serving read-only tables. The default is false.
-    storage.serve.readonly.tables=false
-
-    # The cluster controller schedule interval, in milliseconds. The default is 30 seconds.
-    storage.cluster.controller.schedule.interval.ms=30000
+    ```shell
+    kubectl edit -n ${PULSAR_NAMESPACE} ${PULSAR_RELEASE_NAME}-pulsar-bookie
     ```
 
-2. Verify whether the BookKeeper table service is enabled successfully.
+    Insert the configurations in the following location.
+
+    ```yaml
+    apiVersion: v1
+    data:
+      # <Place your configurations here>
+      BOOKIE_MEM: |
+        -Xms128m -Xmx256m -XX:MaxDirectMemorySize=256m
+      PULSAR_GC: |
+        -XX:+UseG1GC -XX:MaxGCPauseMillis=10 -XX:+ParallelRefProcEnabled -XX:+UnlockExperimentalVMOptions -XX:+AggressiveOpts -XX:+DoEscapeAnalysis -XX:ParallelGCThreads=4 -XX:ConcGCThreads=4 -XX:G1NewSizePercent=50 -XX:+DisableExplicitGC -XX:-ResizePLAB -XX:+ExitOnOutOfMemoryError -XX:+PerfDisableSharedMem
+      PULSAR_MEM: |
+        -Xms128m -Xmx256m -XX:MaxDirectMemorySize=256m
+      PULSAR_PREFIX_autoRecoveryDaemonEnabled: "false"
+      extraServerComponents: org.apache.bookkeeper.stream.server.StreamStorageLifecycleComponent
+      httpServerEnabled: "true"
+      httpServerPort: "8000"
+      journalDirectories: /pulsar/data/bookkeeper/journal
+      journalMaxBackups: "0"
+      ledgerDirectories: /pulsar/data/bookkeeper/ledgers
+      ...
+    ```
+
+    It will be like this in the end.
+
+    >**Note**
+    >
+    >- You need to add the **`PULSAR_PREFIX_`** prefix to each added parameter.
+    >- `dlog.bkcEnsembleSize` should be the same as the number of replicas of the BookKeeper table service.
+    >- The value of `dlog.bkcAckQuorumSize` and `dlog.bkcWriteQuorumSize` cannot be greater than the value of `dlog.bkcEnsembleSize`.
+    >- By default you can ignore the `storageserver.grpc.port`, `storage.range.store.dirs`, `storage.serve.readonly.tables`, and `storage.cluster.controller.schedule.interval.ms` configurations.
+
+    ```yaml
+    apiVersion: v1
+    data:
+      PULSAR_PREFIX_storage.cluster.controller.schedule.interval.ms: "30000"
+      PULSAR_PREFIX_storage.serve.readonly.tables: "false"
+      PULSAR_PREFIX_storage.range.store.dirs: /pulsar/data/bookkeeper/ranges
+      PULSAR_PREFIX_storageserver.grpc.port: "4181"
+      PULSAR_PREFIX_dlog.bkcAckQuorumSize: "2"
+      PULSAR_PREFIX_dlog.bkcEnsembleSize: "3"
+      PULSAR_PREFIX_dlog.bkcWriteQuorumSize: "2"
+      BOOKIE_MEM: |
+        -Xms128m -Xmx256m -XX:MaxDirectMemorySize=256m
+      PULSAR_GC: |
+        -XX:+UseG1GC -XX:MaxGCPauseMillis=10 -XX:+ParallelRefProcEnabled -XX:+UnlockExperimentalVMOptions -XX:+AggressiveOpts -XX:+DoEscapeAnalysis -XX:ParallelGCThreads=4 -XX:ConcGCThreads=4 -XX:G1NewSizePercent=50 -XX:+DisableExplicitGC -XX:-ResizePLAB -XX:+ExitOnOutOfMemoryError -XX:+PerfDisableSharedMem
+      PULSAR_MEM: |
+        -Xms128m -Xmx256m -XX:MaxDirectMemorySize=256m
+      PULSAR_PREFIX_autoRecoveryDaemonEnabled: "false"
+      extraServerComponents: org.apache.bookkeeper.stream.server.StreamStorageLifecycleComponent
+      httpServerEnabled: "true"
+      httpServerPort: "8000"
+      journalDirectories: /pulsar/data/bookkeeper/journal
+      journalMaxBackups: "0"
+      ledgerDirectories: /pulsar/data/bookkeeper/ledgers
+      ...
+    ```
+
+2. Restart the BookKeeper table service to make the configurations work.
+
+    ```shell
+    kubectl rollout restart statefulset -n ${PULSAR_NAMESPACE} ${PULSAR_RELEASE_NAME}-pulsar-bookie 
+    ```
+
+3. Verify whether the BookKeeper table service is enabled successfully.
 
     After starting the bookie, execute the following command.
 
     ```shell
-    telnet localhost 4181
+    kubectl exec -it -n ${PULSAR_NAMESPACE} ${PULSAR_RELEASE_NAME}-pulsar-bookie-0 -- nc -zv 127.0.0.1 4181
     ```
 
     The output is something like this:
 
     ```text
-    Trying 127.0.0.1...
-    Connected to localhost.
-    Escape character is '^]'.
+    Connection to 127.0.0.1 4181 port [tcp/*] succeeded!
     ```
 
 ### Submit Java Stateful Functions
@@ -127,7 +196,7 @@ This section describes how to submit a Java stateful function through a function
       autoAck: true
       statefulConfig:
         pulsar:
-          serviceUrl: "bk://test-pulsar-bk.default.svc.cluster.local:4181"
+          serviceUrl: "bk://test-pulsar-bookie.default.svc.cluster.local:4181"
     ---
     apiVersion: v1
     kind: ConfigMap
@@ -195,7 +264,7 @@ This section describes how to submit a Python stateful function through a functi
       autoAck: true
       statefulConfig:
         pulsar:
-          serviceUrl: "bk://test-pulsar-bk.default.svc.cluster.local:4181"
+          serviceUrl: "bk://test-pulsar-bookie.default.svc.cluster.local:4181"
     ---
     apiVersion: v1
     kind: ConfigMap
